[package]
name = "ask"
version = "1.0.0"
edition = "2024"
authors = ["Avinash Krishna Kumar"]
description = "A powerful AI assistant CLI tool with dynamic MCP (Model Context Protocol) server support"
repository = "https://github.com/avi1989/ask-rs"
homepage = "https://github.com/avi1989/ask-rs"
license = "MIT"
keywords = ["cli", "ai", "assistant", "mcp", "openai"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-openai = "0.29.3"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3"
markterm = "0.3.1"
once_cell = "1.21.3"
openai-api-rs = "6.0.11"
regex = "1.11"
reqwest = "0.12.23"
rmcp = { version = "0.7.0", features = ["client", "transport-child-process", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
rmcp-macros = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1"
sysinfo = "0.37.1"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
